deploy-files/orders/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: awraad/orders
        ports:
        - containerPort: 80
