deploy-files/orders/orders-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: test
  labels:
    name: orders
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    name: orders
