deploy-files/orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: test
spec:
  type: NodePort
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 80
