deploy-files/orders/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: orders-ingress
  namespace: test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /orders
        backend:
          serviceName: orders
          servicePort: 80
